# MacrocenterStockChecker

./: .dockerignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: README.md  catalog.example.json  products.example.json  products.yaml
docs/: macrocenter_parser_rules.md
src/macrocenter_stock_checker/: __init__.py  cli.py  collector.py  config.py  config_loader.py  connectors.py  database.py  db.py  models.py  orchestration.py  parsers.py  repositories.py  retry.py  time_utils.py  workflow.py
src/macrocenter_stock_checker/connectors/: __init__.py  base.py  macrocenter.py
tests/: README.md  test_check_now.py  test_cli.py  test_config_and_workflow.py  test_config_loader.py  test_macrocenter_connector.py  test_parsers.py  test_retry.py  test_smoke.py  test_storage.py
tests/fixtures/: parser_cases.json
tests/fixtures/microcenter/: in_stock_primary.html  json_ld_price_only.html  out_of_stock_fallback.html
