[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macrocenter-stock-checker"
version = "0.1.0"
description = "Container-first stock and price snapshot collector"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
macrocenter-checker = "macrocenter_stock_checker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
