[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macrocenter-stock-checker"
version = "0.1.0"
description = "Container-friendly stock and price snapshot collector MVP"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MacrocenterStockChecker Contributors" }]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.0",
  "requests>=2.31.0",
  "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
macrocenter-stock-checker = "macrocenter_stock_checker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
